--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -8,21 +8,22 @@ layout: wrapper
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1"><!-- Begin Jekyll SEO tag v2.8.0 -->
-    <meta name="generator" content="Jekyll v4.3.3" />
-    <meta property="og:title" content="About" />
-    <meta property="og:locale" content="en_US" />
-    <meta name="description"
-        content="Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description." />
-    <meta property="og:description"
-        content="Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description." />
-    <link rel="canonical" href="http://localhost:4000/about/" />
-    <meta property="og:url" content="http://localhost:4000/about/" />
-    <meta property="og:site_name" content="Your awesome title" />
-    <meta property="og:type" content="website" />
-    <meta name="twitter:card" content="summary" />
-    <meta property="twitter:title" content="About" />
-    <script type="application/ld+json">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Begin Jekyll SEO tag v2.8.0 -->
+    <!-- <meta name="generator" content="Jekyll v4.3.3" /> -->
+    <!-- <meta property="og:title" content="About" /> -->
+    <!-- <meta property="og:locale" content="en_US" /> -->
+    <!-- <meta name="description" -->
+        <!-- content="Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description." /> -->
+    <!-- <meta property="og:description" -->
+        <!-- content="Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description." /> -->
+    <!-- <link rel="canonical" href="http://localhost:4000/about/" /> -->
+    <!-- <meta property="og:url" content="http://localhost:4000/about/" /> -->
+    <!-- <meta property="og:site_name" content="Your awesome title" /> -->
+    <!-- <meta property="og:type" content="website" /> -->
+    <!-- <meta name="twitter:card" content="summary" /> -->
+    <!-- <meta property="twitter:title" content="About" /> -->
+    <!-- <script type="application/ld+json"> -->
     {"@context":"https://schema.org","@type":"WebSite","description":"Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.","headline":"About","name":"Your awesome title","url":"http://localhost:4000/about/"}</script>
 
     <title>Carles</title>
