remove context screept

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -24,7 +24,7 @@ layout: wrapper
     <!-- <meta name="twitter:card" content="summary" /> -->
     <!-- <meta property="twitter:title" content="About" /> -->
     <!-- <script type="application/ld+json"> -->
-    {"@context":"https://schema.org","@type":"WebSite","description":"Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.","headline":"About","name":"Your awesome title","url":"http://localhost:4000/about/"}</script>
+    <!-- {"@context":"https://schema.org","@type":"WebSite","description":"Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.","headline":"About","name":"Your awesome title","url":"http://localhost:4000/about/"}</script> -->
 
     <title>Carles</title>
 </head>
