post basic format

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,16 @@
 ---
 layout: wrapper
 ---
+<div class="container">
 
-{{content}}
+    <div class="row justify-content-center">
+        <div class="col-sm-8">
+            <img src="{{page.preview}}" alt="Couldn't load preview image :\" class="img-fluid">
+        </div>
+    </div>
+
+    <div class="row">
+        {{content}}
+    </div>
+
+</div>
