--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -36,7 +36,7 @@ layout: wrapper
 
 
         <div class="row">
-            <ul class="nav nav-tabs" id="myTab" role="tablist">
+            <ul class="nav nav-tabs nav-fill" id="myTab" role="tablist">
                 <li class="nav-item" role="presentation">
                     <button class="nav-link active" id="projects-tab" data-bs-toggle="tab" data-bs-target="#projects"
                         type="button" role="tab" aria-controls="projects" aria-selected="true">Projects</button>
