add postPage style to wrapper

--- a/_layouts/wrapper.html
+++ b/_layouts/wrapper.html
@@ -1,6 +1,7 @@
 ---
 ---
 <link rel="stylesheet" href="/assets/bootstrap-5.0.2-dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="/assets/css/postPage.css">
 <script src="/assets/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
 
 
