--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,16 +6,16 @@ layout: wrapper
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/postPage.css">
 </head>
 
-
-<div class="container baseContainer">
-    <div class="row">
-        <h1> {{page.title}} </h1>
-    </div>
-    <div class="my-3">
+<body>
+    
+    <div class="container baseContainer">
+        <div class="row">
+            <h1> {{page.title}} </h1>
+        </div>
         <img src="{{page.preview}}" alt="Couldn't load preview image :\" class="headerIMG">
-    </div>
-    <div class="row">
+        <div class="row">
         {{content}}
     </div>
-
+    
 </div>
+</body>
