--- a/_includes/default_card.html
+++ b/_includes/default_card.html
@@ -1,25 +1,31 @@
+{% assign abstract = nil %}
+{% assign paragraphs = post.content | split: '\n\n' %}
+{% for paragraph in paragraphs %}
+  {% if paragraph contains '<!-- abstract -->' %}
+    {% assign abstract = paragraph | strip_html %}
+    {% break %}
+  {% endif %}
+{% endfor %}
+
 <link rel="stylesheet" href="/assets/css/post.css">
 
-<div class="row post-preview" href>
+
+<div class="row post-preview" href="{{post.permalink}}">
     {% comment %} If screen is extra small (xs) or small (sm), display as one row {% endcomment %}
     <div class="col-12 col-sm-6">
         <a href="{{post.permalink}}">
             <img src="{{post.preview}}" alt="..." class="img-fluid">
         </a>
     </div>
-    <div class="col-12 col-sm-6">
+    <div class="col-12 col-sm-6 p-0">
         <a href="{{post.permalink}}">
             <div class="row">
-                <h4 class="g-0">{{post.title}}</h4>
+                <h4 >{{post.title}}</h4>
             </div>
             <div class="row">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur non sapien lacus. Sed elit massa,
-                sollicitudin eget pretium sed, semper ut sapien. Curabitur mollis ultricies leo posuere fringilla. Donec
-                ut
-                mollis ante, feugiat congue urna. Donec posuere ante vel molestie volutpat. Praesent velit turpis,
-                venenatis
-                vel quam sed, eleifend convallis lectus. Mauris aliquet lorem nec quam fermentum tincidunt.
+                <p class="compact">{{ abstract }}</p>
             </div>
         </a>
     </div>
 </div>
+ 
