--- a/_includes/default_card.html
+++ b/_includes/default_card.html
@@ -17,7 +17,7 @@
             <img src="{{post.preview}}" alt="..." class="img-fluid">
         </a>
     </div>
-    <div class="col-12 col-sm-6 p-0">
+    <div class="col-12 col-sm-6 p-sm-0">
         <a href="{{post.permalink}}">
             <div class="row">
                 <h4 >{{post.title}}</h4>
