--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -30,7 +30,7 @@ layout: wrapper
             </div>
 
             <div class="fw-light my-4">
-                I like photography, Visual Effects, CGI, and developing multimedia apps.
+                I like photography, Visual Effects, CGI and developing multimedia apps.
             </div>
         </div>
 
