--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -12,26 +12,26 @@ layout: wrapper
     <!-- Begin Jekyll SEO tag v2.8.0 -->
     <meta name="description" content="{{ site.description }}">
     <meta name="keywords" content="{{ site.keywords }}">
-
+    <link rel="stylesheet" href="/assets/css/index.css">
     <title>{{ site.title }}</title>
 </head>
 
 <body>
     <div class="container">
-        <div class="container" style="width: 700px;">
-            <div class="my-4">
-                <div class="h3 fw-normal ">About me</div>
-                <div class="fw-light ">
+        <div class="row justify-content-center">
+            <div class="row about-me">
+                <h3 class="h3 fw-normal">About me</h3>
+                <div class="fw-light">
                     I have a <span class="fw-bolder">master degree in computer graphics</span> by the Polytechnic
                     University of Catalonya
                     and a <span class="fw-bolder">bachelor's degree in Digital Technologies and Multimedia</span> by the
                     Polytechnic University of Valencia.
                 </div>
+                <div class="my-3">
+                    I like photography, Visual Effects, CGI and developing multimedia apps.
+                </div>
             </div>
 
-            <div class="fw-light my-4">
-                I like photography, Visual Effects, CGI and developing multimedia apps.
-            </div>
         </div>
 
 
