--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: wrapper
 ---
 
 <head>
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/postPage.css">
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/post.css">
 </head>
 
 <body>
