--- a/_layouts/wrapper.html
+++ b/_layouts/wrapper.html
@@ -2,8 +2,9 @@
 ---
 <head>
     <link rel="stylesheet" href="/assets/bootstrap-5.0.2-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/postPage.css">
     <script src="/assets/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+    <link rel="stylesheet" href="/assets/css/main.css">
 </head>
 
 
@@ -11,3 +12,4 @@
 
 {{content}}
 
+{% include footer.html %}
