--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -4,7 +4,7 @@
     max-height: 200px;
     margin: 20px;
     overflow: hidden;
-    transform: scale(0.95);
+    transform: scale(1.0);
 
     /* box-shadow: 0 4px 6px -6px gray; */
 
@@ -23,17 +23,25 @@
     height: 200px;
 }
 
+.fill{
+    width: 100%;
+    height: 100%;
+    text-align: start;
+}
+
 a{
     display: inline;
     text-decoration: none;
     color: gray;
 }
 
+
 @media (max-width: 576px) { /* Small screens */
     .post-preview {
         max-height: 400px; /* Double the height */
     }
     .post-preview img{
+        margin-bottom: 10px;
         width: 100%;
     }
 }
