fill text on default card

--- a/_includes/default_card.html
+++ b/_includes/default_card.html
@@ -19,11 +19,13 @@
     </div>
     <div class="col-12 col-sm-6 p-sm-0">
         <a href="{{post.permalink}}">
-            <div class="row">
-                <h4 >{{post.title}}</h4>
-            </div>
-            <div class="row">
-                <p class="compact">{{ abstract }}</p>
+            <div class="row fill">
+                <div class="row">
+                    <h4 >{{post.title}}</h4>
+                </div>
+                <div class="row fill">
+                    <p class="compact">{{ abstract }}</p>
+                </div>
             </div>
         </a>
     </div>
