--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,6 +23,11 @@ p{
     margin-bottom: 30px;
 }
 
-p.compact{
-    line-height: 1.5;
+div.compact p{
+    line-height: 1.3;
+}
+
+.highlighter-rouge {
+    color: #df6f06; /* Change the background color as desired */
+    /* Add more styling rules as needed */
 }
