--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -31,27 +31,25 @@ layout: wrapper
                     I like photography, Visual Effects, CGI and developing multimedia apps.
                 </div>
             </div>
-
         </div>
-
-
+        
         <div class="row">
             <ul class="nav nav-tabs nav-fill" id="myTab" role="tablist">
                 <li class="nav-item" role="presentation">
-                    <button class="nav-link active" id="projects-tab" data-bs-toggle="tab" data-bs-target="#projects"
+                    <button class="nav-link" id="projects-tab" data-bs-toggle="tab" data-bs-target="#projects"
                         type="button" role="tab" aria-controls="projects" aria-selected="true">Projects</button>
                 </li>
                 <li class="nav-item" role="presentation">
-                    <button class="nav-link" id="posts-tab" data-bs-toggle="tab" data-bs-target="#posts" type="button"
+                    <button class="nav-link active" id="posts-tab" data-bs-toggle="tab" data-bs-target="#posts" type="button"
                         role="tab" aria-controls="posts" aria-selected="false">Posts</button>
                 </li>
             </ul>
             <div class="tab-content" id="myTabContent">
-                <div class="tab-pane fade show active" id="projects" role="tabpanel" aria-labelledby="home-tab">
+                <div class="tab-pane fade" id="projects" role="tabpanel" aria-labelledby="home-tab">
                     {% include project_list.html %}
 
                 </div>
-                <div class="tab-pane fade" id="posts" role="tabpanel" aria-labelledby="posts-tab">
+                <div class="tab-pane fade show active" id="posts" role="tabpanel" aria-labelledby="posts-tab">
                     {% include post_list.html %}
                 </div>
             </div>
