--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -25,7 +25,7 @@
 
     {% include navbar.html %}
 
-    <div class="container">
+    <div class="container mt-4">
         <div class="row justify-content-center">
             <div class="row about-me">
                 <h3 class="h3 fw-normal">About me</h3>
@@ -41,7 +41,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row mt-4">
             <ul class="nav nav-tabs nav-fill" id="myTab" role="tablist">
                 <li class="nav-item" role="presentation">
                     <button class="nav-link" id="projects-tab" data-bs-toggle="tab" data-bs-target="#projects"
