change div to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,5 @@
-<link rel="stylesheet" href="/assets/css/footer.css">
 
-<div class="container-fluid bg-light border-top pt-4 mt-4">
+<footer class="container-fluid bg-light border-top pt-4 mt-4">
     <div class="container">
 
         <div class="row">
@@ -8,7 +7,6 @@
         </div>
 
         <hr>
-
 
         <div class="row additional-info">
             <div class="col">
@@ -22,4 +20,4 @@
             </div>
         </div>
     </div>
-</div>
+</footer>
