add the css to post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,9 @@
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css">
     <link rel="stylesheet" type="text/css" href="/assets/css/post.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/figure.css">
+    <link rel="stylesheet" href="/assets/css/footer.css">
+
 </head>
 
 {% assign parts = page.content | split:"<!-- end-abstract -->" %}
