remove and add styles

--- a/_includes/default_card.html
+++ b/_includes/default_card.html
@@ -19,7 +19,7 @@
                 <div class="row">
                     <h4>{{post.title}}</h4>
                 </div>
-                <div class="row fill compact">
+                <div class="row fill">
                     {{ abstract }}
                 </div>
             </div>
