--- a/_includes/figure.html
+++ b/_includes/figure.html
@@ -1,5 +1,5 @@
 
-<figure>
+<figure class="col">
     <img src="{{ include.image }}" alt="{{ include.caption }}">
     <figcaption>{{ include.caption }}</figcaption>
 </figure>
