--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,8 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
     <div class="container">
-        
         <a class="navbar-brand" href="/">Carles Matoses Gimenez</a>
-
         </div>
     </div>
 </nav>
