figure improvement responsivity

--- a/_includes/figure.html
+++ b/_includes/figure.html
@@ -1,5 +1,5 @@
 
-<figure class="col col-12 col-sm-6" id="{{ include.id }}" >
+<figure class="col-12 col-sm-6" id="{{ include.id }}" >
     <img src="{{ include.image }}" alt="{{ include.caption }}">
     <figcaption>{{ include.caption }}</figcaption>
 </figure>
