--- a/assets/css/figure.css
+++ b/assets/css/figure.css
@@ -1,4 +1,4 @@
-figure.col {
+figure.col,figure.col-12  {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -6,13 +6,14 @@ figure.col {
     overflow: hidden; /* Prevents overflowing content from being visible outside the figure */
 }
 
-figure.col img {
+figure.col img, figure.col-12 img{
     max-width: 100%; /* Ensures the image does not exceed the width of its container */
     height: auto; /* Maintains the aspect ratio of the image */
     display: block;
     margin: auto; /* Centers the image horizontally */
 }
 
-figure.col figcaption {
+figure.col figcaption, figure.col-12 figcaption{
     text-align: center;
 }
+
