--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,7 +40,7 @@
             <p class="lead">{{ abstract }}</p>
         </div>
 
-        <div class="row">
+        <div class="row justify-content-center">
             {{ content }}
         </div>
 
