--- a/_includes/post_list.html
+++ b/_includes/post_list.html
@@ -1,9 +1,9 @@
-<div class="row justify-content-center">
 
-    {% for post in site.posts %}
-        {% if post.categories contains 'post' %}
+{% assign category = include.category %}
+{% for post in site.posts %}
+    {% if post.categories contains category %}
+        <div class="row justify-content-center">
             {% include default_card.html %}
-        {% endif %}
-    {% endfor %}
-
-</div>
+        </div>
+    {% endif %}
+{% endfor %}
