--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -54,11 +54,10 @@
             </ul>
             <div class="tab-content" id="myTabContent">
                 <div class="tab-pane fade" id="projects" role="tabpanel" aria-labelledby="home-tab">
-                    {% include project_list.html %}
-
+                    {% include post_list.html category='project' %}
                 </div>
                 <div class="tab-pane fade show active" id="posts" role="tabpanel" aria-labelledby="posts-tab">
-                    {% include post_list.html %}
+                    {% include post_list.html category='post' %}
                 </div>
             </div>
         </div>
