--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -73,3 +73,25 @@ p a{
         width: 100%;
     }
 }
+
+/* // Adding 'Contents' headline to the TOC */
+#markdown-toc::before {
+    content: "Contents";
+    font-weight: bold;
+}
+
+
+/* // Using numbers instead of bullets for listing */
+#markdown-toc ul {
+    list-style: decimal;
+}
+
+#markdown-toc {
+    border-left: 1px solid #aaa;
+    border-right: 1px solid #aaa;
+    border-radius: 15px;
+    max-width: 300px;
+    padding: 2.5em;
+    list-style: decimal;
+    display: inline-block;
+}
