--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -74,24 +74,27 @@ p a{
     }
 }
 
-/* // Adding 'Contents' headline to the TOC */
+/* Adding 'Contents' headline to the TOC */
 #markdown-toc::before {
     content: "Contents";
     font-weight: bold;
 }
 
-
-/* // Using numbers instead of bullets for listing */
+/* Using numbers instead of bullets for listing */
 #markdown-toc ul {
     list-style: decimal;
 }
 
 #markdown-toc {
-    border-left: 1px solid #aaa;
-    border-right: 1px solid #aaa;
-    border-radius: 15px;
-    max-width: 300px;
-    padding: 2.5em;
+    border: 1px solid #aaa;
+    padding: 1.5em;
+    margin-left: 1.5em;
+    margin-right: 1.5em;
     list-style: decimal;
     display: inline-block;
+    max-width: calc(100% - 3em);
+}
+
+#markdown-toc a {
+    color: rgb(70, 176, 238);
 }
