--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -44,11 +44,11 @@
         <div class="row mt-4">
             <ul class="nav nav-tabs nav-fill" id="myTab" role="tablist">
                 <li class="nav-item" role="presentation">
-                    <button class="nav-link" id="projects-tab" data-bs-toggle="tab" data-bs-target="#projects"
+                    <button class="nav-link active" id="projects-tab" data-bs-toggle="tab" data-bs-target="#projects"
                         type="button" role="tab" aria-controls="projects" aria-selected="true">Projects</button>
                 </li>
                 <li class="nav-item" role="presentation">
-                    <button class="nav-link active" id="posts-tab" data-bs-toggle="tab" data-bs-target="#posts"
+                    <button class="nav-link" id="posts-tab" data-bs-toggle="tab" data-bs-target="#posts"
                         type="button" role="tab" aria-controls="posts" aria-selected="false">Posts</button>
                 </li>
             </ul>
