--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -53,10 +53,10 @@
                 </li>
             </ul>
             <div class="tab-content" id="myTabContent">
-                <div class="tab-pane fade" id="projects" role="tabpanel" aria-labelledby="home-tab">
+                <div class="tab-pane fade show active" id="projects" role="tabpanel" aria-labelledby="home-tab">
                     {% include post_list.html category='project' %}
                 </div>
-                <div class="tab-pane fade show active" id="posts" role="tabpanel" aria-labelledby="posts-tab">
+                <div class="tab-pane fade " id="posts" role="tabpanel" aria-labelledby="posts-tab">
                     {% include post_list.html category='post' %}
                 </div>
             </div>
