--- a/_includes/big_figure.html
+++ b/_includes/big_figure.html
@@ -1,6 +1,6 @@
 <div class="row justify-content-center">
     <figure class="col" id="{{ include.id }}">
-        <img src="{{ include.image }}" alt="{{ include.caption }}">
+        <img src="{{ include.image }}" alt="{{ include.caption }}" style="max-height: 300px;">
         <figcaption>{{ include.caption }}</figcaption>
     </figure>
 </div>
