--- a/_includes/big_figure.html
+++ b/_includes/big_figure.html
@@ -1,4 +1,4 @@
-<div class="row justify-content-center">
+<div class="row justify-content-center g-0">
     <figure class="col" id="{{ include.id }}">
         <img src="{{ include.image }}" alt="{{ include.caption }}" style="max-height: 300px;">
         <figcaption>{{ include.caption }}</figcaption>
