creating dynamic renders using webgl

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,6 +15,13 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/figure.css">
     <link rel="stylesheet" href="/assets/css/footer.css">
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/EXRLoader.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
+    <script src="/assets/js/viewer.js"></script>
+    
+
 </head>
 
 {% assign parts = page.content | split:"<!-- end-abstract -->" %}
