--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -111,3 +111,12 @@ p a{
     padding: 0px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
+
+@media (max-width: 576px) { /* Small screens */
+    .glb-viewer {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 300px;
+    }
+}
