--- a/assets/css/figure.css
+++ b/assets/css/figure.css
@@ -1,19 +1,38 @@
-figure.col,figure.col-12  {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    max-width: 100%; /* Ensures the figure does not exceed the width of its container */
-    overflow: hidden; /* Prevents overflowing content from being visible outside the figure */
+/* Default styling for the figure block */
+figure {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 1em 0;
 }
 
-figure.col img, figure.col-12 img{
-    max-width: 100%; /* Ensures the image does not exceed the width of its container */
-    height: auto; /* Maintains the aspect ratio of the image */
-    display: block;
-    margin: auto; /* Centers the image horizontally */
+figure > div {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 0.5em;
 }
 
-figure.col figcaption, figure.col-12 figcaption{
-    text-align: center;
+figure img {
+  height: auto;
+  max-width: 100%; /* Prevent images from overflowing */
 }
 
+figure figcaption {
+  text-align: center;
+  margin-top: 0.5em;
+}
+
+/* Media query for small screens */
+@media (max-width: 600px) {
+  figure {
+    flex-direction: column; /* Stack images vertically */
+    align-items: center; /* Center images */
+    width: 100% !important; /* Force images to fill the container width */
+
+  }
+
+  figure img {
+    width: 100% !important; /* Force images to fill the container width */
+  }
+}
