--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -54,10 +54,10 @@
 
         <img src="{{page.preview}}" alt="Couldn't load preview image :\" class="headerIMG">
 
-        <div class="row">
+        <!-- <div class="row">
             <h1 class="display-6">Abstract:</h1>
             <p class="lead">{{ abstract }}</p>
-        </div>
+        </div> -->
 
         <div class="row justify-content-center">
             {{ content }}
