--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -15,8 +15,8 @@
     <link rel="stylesheet" href="/assets/bootstrap-5.0.2-dist/css/bootstrap.min.css">
     <script src="/assets/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-    <link rel="stylesheet" href="/assets/css/index.css">
-    <link rel="stylesheet" href="/assets/css/main.css">
+    <!-- <link rel="stylesheet" href="/assets/css/index.css"> -->
+    <!-- <link rel="stylesheet" href="/assets/css/main.css"> -->
 
     <title>{{ site.title }}</title>
 </head>
@@ -41,7 +41,7 @@
             </div>
         </div>
 
-        <div class="row mt-4">
+        <div class="row mt-4 list">
             <ul class="nav nav-tabs nav-fill" id="myTab" role="tablist">
                 <li class="nav-item" role="presentation">
                     <button class="nav-link active" id="projects-tab" data-bs-toggle="tab" data-bs-target="#projects"
