--- a/_layouts/wrapper.html
+++ b/_layouts/wrapper.html
@@ -5,6 +5,7 @@
     <script src="/assets/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/main.css">
+    <link rel="stylesheet" href="/assets/css/breadcrumb.css">
 </head>
 
 
