improved preview card

--- a/_includes/default_card.html
+++ b/_includes/default_card.html
@@ -20,7 +20,7 @@
         </div>
         <div class="col-12 col-sm-6 context-text">
             <div class="text-content">
-                <h4>{{post.title}}</h4>
+                <div class="h3">{{post.title}}</div>
                 <div class="abstract-content">
                     {{ abstract }}
                 </div>
