--- a/_layouts/wrapper.html
+++ b/_layouts/wrapper.html
@@ -1,12 +1,19 @@
 ---
 ---
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% if page.title %}{{ page.title }} - {{ site.title }}{% else %}{{ site.title }}{% endif %}</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="/assets/bootstrap-5.0.2-dist/css/bootstrap.min.css">
     <script src="/assets/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/main.css">
     <link rel="stylesheet" href="/assets/css/breadcrumb.css">
 </head>
+<body>
 
 
 {% include navbar.html %}
@@ -14,3 +21,6 @@
 {{content}}
 
 {% include footer.html %}
+
+</body>
+</html>
